# telegram-translate

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  handlers.py  languages.py  main.py  storage.py  translator.py
tests/: test_languages.py  test_storage.py
