[project]
name = "telegram-translate"
version = "0.1.0"
description = "Telegram inline bot that translates messages with an LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "aiosqlite>=0.20",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
